# EyeX-Technologies

./: .dockerignore  .env  .env.example  .gitignore  CLOUDFLARE_DEPLOYMENT.md  Dockerfile  Dockerfile.api  PRODUCTION_READINESS_REPORT.md  PROJECT_AUDIT_REPORT.md  PROJECT_STATUS.md  README.md  SECURITY.md  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts  vitest.workspace.ts  wrangler.jsonc
eyex-backend/: .dockerignore  .env.example  .env.production.example  .gitignore  Dockerfile  Dockerfile.prod  EYEX_ENTERPRISE_PILOT.md  EYEX_HUB71_MVP.md  INVESTOR_PACKAGE.md  PROJECT_STATUS.md  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  setup.py
eyex-backend/.github/workflows/: ci.yml  deploy.yml
eyex-backend/alembic/: env.py
eyex-backend/alembic/versions/: 0001_initial.py  0002_memory_tables.py  0003_customer_platform.py  0004_gtm_growth_system.py  0005_enterprise_trust_intelligence.py
eyex-backend/app/: cache.py  config.py  database.py  dependencies.py  logging_config.py  main.py
eyex-backend/app/agents/: __init__.py  analyst.py  base.py  ceo.py  cfo.py  coder.py  coo.py  decision.py  devops.py  documenter.py  graph.py  planner.py  researcher.py  reviewer.py  risk.py  strategist.py  supervisor.py  tester.py
eyex-backend/app/api/: __init__.py  dependencies.py
eyex-backend/app/benchmarks/: __init__.py
eyex-backend/app/cognitive_data_layer/: __init__.py  pipeline.py
eyex-backend/app/core/: __init__.py  ai_operations.py  context.py  enterprise_architecture.py  enterprise_compliance.py  enterprise_security.py  exceptions.py  metrics.py  middleware.py  platform.py  quota.py  reliability.py  scaling.py  security.py  supabase_auth.py  telemetry.py
eyex-backend/app/db/: __init__.py  knowledge_graph.py  memory.py  session.py  vector_memory.py
eyex-backend/app/engine/: __init__.py
eyex-backend/app/industry/: __init__.py
eyex-backend/app/models/: __init__.py  (+6 more)
eyex-backend/docs/: tools.md
eyex-backend/scripts/: backup.sh  entrypoint.sh  generate_gtm_migration.py  generate_tool_docs.py  init_db.py  run_mission.py  seed.py
eyex-backend/tests/: conftest.py  run_benchmarks.py  test_admin_auth.py  test_ai_operations.py  test_coder.py  test_devops.py  test_documenter.py  test_endpoints.py  test_enterprise_architecture.py  test_enterprise_compliance.py  test_governance.py  test_graph.py  test_gtm.py  test_health.py  test_memory.py  test_mission.py  test_planner.py  test_researcher.py  test_reviewer.py  test_security.py  test_supervisor.py  test_tester.py  test_tools.py
eyex-technologies/: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
eyex-technologies/alembic/: env.py
eyex-technologies/app/: config.py  dependencies.py  main.py
eyex-technologies/scripts/: init_db.py
(+303 files in other folders)
